# homelab-coreos-minipc

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  DOCUMENTATION_UPDATE_PROMPT.md  FIXES_IMPLEMENTED.md  PHASE2_IMPROVEMENTS.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-homelab-setup.yml
compose/: .env.example  README.md  cloud.yml  media.yml  web.yml
config/firewall/: ufw-rules.sh
config/gpu/: intel-qsv-setup.sh
config/nfs/: fstab.template
config/wireguard/: .env.example  apply-config.sh  export-peer-configs.sh  generate-keys.sh  wg0.conf.template
docs/: GPU_TRANSCODING.md  SERVICES.md  SETUP.md  Setup.md  TROUBLESHOOTING.md  Wiki-Home.md  getting-started.md  refactor-nfs-docker-plan.md
docs/audits/: 2025-go-audit-changelog.md  2025-go-audit.md
docs/dev/: build-pipeline.md  devcontainer.md  final-review-checklist.md
docs/operations/: weekend-deployment.md
homelab-setup/: .gitignore  Makefile  PHASE2_AUDIT_PROMPT.md  README.md  SIMPLIFICATION_PHASE1.md  SIMPLIFICATION_PHASE2_RESULTS.md  go.mod  go.sum
homelab-setup-py/: .gitignore  MIGRATION.md  README.md  install.sh  pyproject.toml
homelab-setup-py/homelab_setup/: __init__.py  cli.py  config.py  preflight.py  prompts.py  system.py  utils.py
homelab-setup-scripts/: QUICKSTART.md  README.md  homelab-setup.sh
ignition/: config.bu.template  generate-password-hash.sh  transpile.sh
recipes/: packages.yml  recipe.yml  systemd.yml
scripts/: gpu-verify.sh  nfs-health.sh  setup.sh  wireguard-check.sh
(+106 files in other folders)
